@@ -1,3 +1,9 @@
+2018-03-19  Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	PR fortran/65453
+	* decl.c (get_proc_name): Catch clash between a procedure statement
+	and a contained subprogram
+
 2018-03-15  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR fortran/78741
